# AI

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
src/chains/: auto_modify_chain.py  chat_chain.py  feedback_chain.py  planner_chain.py  research_agent_langgraph.py  research_chain.py  user_modify_chain.py
src/memory/: redis_memory.py
src/prompts/: auto_modify_prompts.py  chat_prompts.py  feedback_prompts.py  planner_prompts.py  research_prompts.py  user_modify_prompts.py
src/server/api/: router.py
src/server/docs/: api_docs.py  auto_modify_docs.py  chat_docs.py  document_docs.py  feedback_docs.py  planner_docs.py  research_docs.py  user_modify_docs.py
src/server/endpoints/: auto_modify_endpoint.py  chat_endpoint.py  document_endpoint.py  feedback_endpoint.py  planner_endpoint.py  research_endpoint.py  user_modify_endpoint.py
src/server/models/: story_settings.py
src/vectorstores/: README.md  __init__.py  chunk_manager.py  differential_vectorstore.py  vectorstore_manager.py
