[project]
name = "ai"
version = "0.1.0"
description = "AI server with Langchain"
authors = [
    {name = "qkoo0833",email = "qkoo0833@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain (>=0.3.14,<0.4.0)",
    "langchain-core (>=0.3.29,<0.4.0)",
    "langchain-community (>=0.3.14,<0.4.0)",
    "openai (>=1.59.7,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

